fix(number-input): adjusted alignment (#4260)

--- a/src/patternfly/components/NumberInput/number-input.scss
+++ b/src/patternfly/components/NumberInput/number-input.scss
@@ -36,5 +36,6 @@
 }
 
 .pf-c-number-input__icon {
+  display: flex;
   font-size: var(--pf-c-number-input__icon--FontSize);
 }
